--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.2+1
   drift: ^1.6.0
+  firebase_core: ^1.17.0
+  firebase_database: ^9.0.14
 
 dev_dependencies:
   flutter_test:
